--- a/MyDiary/app/build.gradle
+++ b/MyDiary/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
 
+
+
     viewBinding {
         enabled = true
     }
@@ -21,6 +23,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
     buildTypes {
         release {
@@ -32,13 +35,45 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    //implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.firebase:firebase-database:20.0.2'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation 'com.google.firebase:firebase-auth'
-}
+    //implementation 'com.android.support:support-annotations:28.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:23.3.0'
+
+    compile 'com.android.support:support-annotations:23.1.1'
+    //noinspection GradleCompatible
+//    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.orhanobut:logger:1.15'
+    //noinspection GradleCompatible
+//    implementation 'com.android.support:cardview-v7:23.4.0'
+    implementation 'com.jakewharton:butterknife:7.0.1'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.google.code.gson:gson:2.4'
+//    //noinspection GradleCompatible
+//    implementation 'com.android.support:recyclerview-v7:23.+'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:23.4.0'
+    implementation 'com.getbase:floatingactionbutton:1.5.1'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    implementation 'io.github.yavski:fab-speed-dial:1.0.1'
+    implementation 'cc.trity.floatingactionbutton:library:1.0.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    }
