--- a/MyDiary/app/src/main/AndroidManifest.xml
+++ b/MyDiary/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mydiary">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.mydiary" >
+
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,19 +12,50 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- android:name="com.example.mydiary.DiaryApplication" -->
+        <!-- android:allowBackup="true" -->
+        <!-- android:icon="@drawable/search" -->
+        <!-- android:label="@string/app_name" -->
+        <!-- android:supportsRtl="true" -->
+        <!-- android:theme="@style/AppTheme"> -->
         <activity
             android:name=".ForgotPassword"
             android:exported="true" />
         <activity
             android:name=".SignUp"
             android:exported="true" />
-        <activity android:name=".LogIn">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".LogIn" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.DiaryHomeActivity"
+            tools:ignore="WrongManifestParent" >
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".ui.UpdateDiaryActivity"
+            tools:ignore="WrongManifestParent" />
+        <activity
+            android:name=".ui.AddDiaryActivity"
+            tools:ignore="WrongManifestParent" />
+        <activity
+            android:name=".ui.TestActivity"
+            tools:ignore="WrongManifestParent" >
         </activity>
     </application>
 
