--- a/MyDiary/app/build.gradle
+++ b/MyDiary/app/build.gradle
@@ -24,6 +24,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -81,4 +82,6 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     implementation 'com.google.android.material:material:1.1.0-alpha08'
+
+    implementation'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     }
