--- a/MyDiary/app/build.gradle
+++ b/MyDiary/app/build.gradle
@@ -86,4 +86,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha08'
 
     implementation'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
     }
