--- a/MyDiary/build.gradle
+++ b/MyDiary/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
@@ -19,7 +19,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         google()
         jcenter()
-        
+        mavenCentral()
     }
 }
 
