--- a/MyDiary/app/src/main/AndroidManifest.xml
+++ b/MyDiary/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.NavigationActivity"
+            android:name=".ui.MapActivity"
             android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
