--- a/MyDiary/app/src/main/AndroidManifest.xml
+++ b/MyDiary/app/src/main/AndroidManifest.xml
@@ -16,17 +16,23 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MyDiary"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        tools:replace="android:icon, android:label"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.MapActivity"
             android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity> <!-- android:name="com.example.mydiary.DiaryApplication" -->
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>-->
+        </activity> <!-- android:name="com.example.mydiary.DiaryApplication" -->
         <!-- android:allowBackup="true" -->
         <!-- android:icon="@drawable/search" -->
         <!-- android:label="@string/app_name" -->
@@ -39,6 +45,7 @@
             android:name=".ui.SignUpActivity"
             android:exported="true" />
         <activity android:name=".ui.LogInActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,11 +55,6 @@
         <activity
             android:name=".ui.DiaryHomeActivity"
             tools:ignore="WrongManifestParent">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN"/> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".ui.UpdateDiaryActivity"
